# advent-of-code

./: go.mod
2020/go/: go.mod
2020/go/day-1/: main.go
2020/rust/: Cargo.toml
2020/rust/src/day-1/: main.rs
2021/day-5/: main.go
2021/go/: go.mod
2021/go/day-7/: main.go
2021/go/day-8/: main.go
2021/util/: util.go
2022/rust/: Cargo.toml
2022/rust/src/day-1/: main.rs
2022/rust/src/day-10/: main.rs
2022/rust/src/day-11/: main.rs
2022/rust/src/day-2/: main.rs
2022/rust/src/day-3/: main.rs
2022/rust/src/day-4/: main.rs
2022/rust/src/day-5/: main.rs
2022/rust/src/day-6/: main.rs
2022/rust/src/day-7/: main.rs
2022/rust/src/day-8/: main.rs
2022/rust/src/day-9/: main.rs
2023/rust/src/day-1/: main.rs
2023/rust/src/day-2/: main.rs
2023/rust/src/day-3/: main.rs
2024/rust/: Cargo.toml
2024/rust/src/day-1/: main.rs
2024/rust/src/day-2/: main.rs
2024/rust/src/day-3/: main.rs
2024/rust/src/day-4/: main.rs
2024/rust/src/day-7/: main.rs
2025/rust/: Cargo.toml
2025/rust/src/day-1/: main.rs
2025/rust/src/day-2/: main.rs
2025/rust/src/day-3/: main.rs
2025/rust/src/day-4/: main.rs
2025/rust/src/day-5/: main.rs
2025/rust/src/day-6/: main.rs
2025/rust/src/day-7/: main.rs
2025/rust/src/util/: grid.rs
day-1/: go.mod  main.go
day-10/: main.go
day-11/: main.go
day-2/: go.mod  main.go
day-3/: main.go
day-4/: main.go
day-5/: main.go
day-6/: main.go
day-7/: main.go
day-8/: main.go
day-9/: main.go
