[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "day-1"
path = "src/day-1/main.rs"

[[bin]]
name = "day-2"
path = "src/day-2/main.rs"

[[bin]]
name = "day-3"
path = "src/day-3/main.rs"

[[bin]]
name = "day-4"
path = "src/day-4/main.rs"

[[bin]]
name = "day-5"
path = "src/day-5/main.rs"
